# AzureX

./: .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  index.html  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: publish.yaml
CosmosService/CRUD Service/: index.html
documentation/: mkdocs.yml
documentation/docs/: index.md
documentation/docs/CosmosService/: CRUD Service.md
documentation/docs/stylesheets/: extra.css
search/: search_index.json
src/azurex/cosmos/: __init__.py  cosmos_crud_service.py  crud_service.py
stylesheets/: extra.css
tests/: test.py  test_comsos_crud_service.py
